--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "name": "@mpalourdio",
             "email": "mpalourdio@gmail.com",
             "homepage": "https://github.com/mpalourdio"
-        },
+        }
     ],
     "require": {
         "php": ">=5.3.3",
@@ -25,7 +25,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "DoctrineORMModule\\": "src/"
+            "CustomDoctrinehydrator\\": "src/"
         }
     }
 }
