--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,4 @@
 {
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "name": "mpalourdio/customdoctrinehydrator",
     "description": "Simple Doctrine ORM Factory module that handles DateTime hydration",
     "license": "MIT",
@@ -20,7 +18,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "doctrine/doctrine-orm-module": "0.8.*@dev"
+        "doctrine/doctrine-orm-module": "0.8.*"
     },
     "minimum-stability": "dev",
     "autoload": {
