revert doctrine orm module require version and fix typo

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "name": "mpalourdio/customdoctrinehydrator",
     "description": "Simple Doctrine ORM Factory module that handles DateTime hydration",
     "license": "MIT",
@@ -18,12 +20,12 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "doctrine/doctrine-orm-module": "0.8.*"
+        "doctrine/doctrine-orm-module": "0.8.*@dev"
     },
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "CustomDoctrinehydrator\\": "src/"
+            "CustomDoctrineHydrator\\": "src/"
         }
     }
 }
