preparing datetime columns handling

--- a/config/customdoctrinehydrator.config.global.php.dist
+++ b/config/customdoctrinehydrator.config.global.php.dist
@@ -25,6 +25,6 @@ return array(
             'two_digits_day'   => true,
         ),
         // @todo
-        'datetime' => array(),
+        'datetime' => array(), //http://userguide.icu-project.org/formatparse/datetime
     ),
 );
