--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mpalourdio/customdoctrinehydrator",
+    "name": "mpalourdio/mpa-custom-doctrine-hydrator",
     "description": "Simple Doctrine ORM Factory module that handles DateTime hydration",
     "license": "MIT",
     "keywords": [
@@ -8,7 +8,7 @@
         "module",
         "zf2"
     ],
-    "homepage": "https://github.com/mpalourdio/CustomDoctrineHydrator",
+    "homepage": "https://github.com/mpalourdio/MpaCustomDoctrineHydrator",
     "authors": [
         {
             "name": "@mpalourdio",
@@ -23,7 +23,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "CustomDoctrineHydrator\\": "src/"
+            "MpaCustomDoctrineHydrator\\": "src/"
         }
     }
 }
