--- a/config/mpacustomdoctrinehydrator.config.global.php.dist
+++ b/config/mpacustomdoctrinehydrator.config.global.php.dist
@@ -8,33 +8,33 @@
  * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-return array(
-    'mpacustomdoctrinehydrator' => array(
-        'formats'  => array(
-            'fr-FR' => array(
+return [
+    'mpacustomdoctrinehydrator' => [
+        'formats'  => [
+            'fr-FR' => [
                 'date_format'    => 'd/m/Y',
                 'time_format'    => 'H:i:s',
-            ),
-            'fr-CH' => array(
+            ],
+            'fr-CH' => [
                 'date_format'    => 'd.m.Y',
                 'time_format'    => 'H:i:s',
-            ),
-            'de-CH' => array(
+            ],
+            'de-CH' => [
                 'date_format'    => 'd.m.Y',
                 'time_format'    => 'H:i:s',
-            ),
-            'de-DE' => array(
+            ],
+            'de-DE' => [
                 'date_format'    => 'd.m.Y',
                 'time_format'    => 'H:i:s',
-            ),
-            'en-US' => array(
+            ],
+            'en-US' => [
                 'date_format'    => 'd.m.Y',
                 'time_format'    => 'H:i:s',
-            ),
-            'en-GB' => array(
+            ],
+            'en-GB' => [
                 'date_format'    => 'm/d/Y',
                 'time_format'    => 'H:i:s',
-            )
-        ),
-    ),
-);
+            ],
+        ],
+    ],
+];
