corrected formats and added placeholders

--- a/config/mpacustomdoctrinehydrator.config.global.php.dist
+++ b/config/mpacustomdoctrinehydrator.config.global.php.dist
@@ -10,30 +10,56 @@
 
 return [
     'mpacustomdoctrinehydrator' => [
-        'formats'  => [
+        'formats' => [
             'fr-FR' => [
-                'date_format'    => 'd/m/Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'd/m/Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'd/m/Y H:i:s',
+                'date_placeholder'     => 'jj/mm/aaaa',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'jj/mm/aaaa hh:mm:ss',
             ],
             'fr-CH' => [
-                'date_format'    => 'd.m.Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'd.m.Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'd.m.Y H:i:s',
+                'date_placeholder'     => 'jj.mm.aaaa',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'jj.mm.aaaa hh:mm:ss',
+
             ],
             'de-CH' => [
-                'date_format'    => 'd.m.Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'd.m.Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'd.m.Y H:i:s',
+                'date_placeholder'     => 'tt.mm.jjjj',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'tt.mm.jjjj hh:mm:ss',
             ],
             'de-DE' => [
-                'date_format'    => 'd.m.Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'd.m.Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'd.m.Y H:i:s',
+                'date_placeholder'     => 'tt.mm.jjjj',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'tt.mm.jjjj hh:mm:ss',
+
             ],
             'en-US' => [
-                'date_format'    => 'd.m.Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'm/d/Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'm/d/Y H:i:s',
+                'date_placeholder'     => 'mm/dd/yyyy',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'mm/dd/yyyy hh:mm:ss',
             ],
             'en-GB' => [
-                'date_format'    => 'm/d/Y',
-                'time_format'    => 'H:i:s',
+                'date_format'          => 'd/m/Y',
+                'time_format'          => 'H:i:s',
+                'datetime_format'      => 'd/m/Y H:i:s',
+                'date_placeholder'     => 'dd/mm/yyyy',
+                'time_placeholder'     => 'hh:mm:ss',
+                'datetime_placeholder' => 'dd/mm/yyyy hh:mm:ss',
             ],
         ],
     ],
