--- a/tests/TestConfiguration.php.dist
+++ b/tests/TestConfiguration.php.dist
@@ -10,6 +10,8 @@
 
 return [
     'modules'                 => [
+        'DoctrineModule',
+        'DoctrineORMModule',
         'MpaCustomDoctrineHydrator',
     ],
     'module_listener_options' => [
