--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,25 @@
         }
     ],
     "require":     {
-        "php":                              ">=5.5.0",
+        "php":                              ">=5.5",
         "doctrine/doctrine-orm-module":     "0.*",
-        "zendframework/zend-form":          ">=2.2",
-        "zendframework/zend-modulemanager": ">=2.2"
+        "zendframework/zend-form":          "2.3.*",
+        "zendframework/zend-modulemanager": "2.3.*"
     },
     "require-dev": {
-        "zendframework/zendframework": "2.*",
+        "zendframework/zendframework": "2.3.*",
         "phpunit/phpunit":             "~3.7",
         "squizlabs/php_codesniffer":   "1.5.*"
     },
     "autoload":    {
         "psr-0": {
-            "MpaCustomDoctrineHydrator\\": "src/"
+            "MpaCustomDoctrineHydrator\\":     "src/",
+            "MpaCustomDoctrineHydratorTest\\": "tests/"
+        }
+    },
+    "extra":       {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
         }
     }
 }
