--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,46 @@
 {
-    "name":        "mpalourdio/mpa-custom-doctrine-hydrator",
-    "description": "Module that helps you deal with dates for DoctrineModule & ZF2 : filtering, hydration, Locale etc.",
-    "license":     "MIT",
-    "keywords":    [
+    "name":         "mpalourdio/mpa-custom-doctrine-hydrator",
+    "description":  "Module that helps you deal with dates for DoctrineModule & ZF2 : filtering, hydration, Locale etc.",
+    "license":      "MIT",
+    "keywords":     [
         "doctrine",
         "orm",
         "module",
         "zf2"
     ],
-    "homepage":    "https://github.com/mpalourdio/MpaCustomDoctrineHydrator",
-    "authors":     [
+    "homepage":     "https://github.com/mpalourdio/MpaCustomDoctrineHydrator",
+    "authors":      [
         {
             "name":     "@mpalourdio",
             "email":    "mpalourdio@gmail.com",
             "homepage": "https://github.com/mpalourdio"
         }
     ],
-    "require":     {
+    "require":      {
         "php":                              ">=5.5",
         "doctrine/doctrine-orm-module":     "0.*",
         "zendframework/zend-form":          "2.3.*",
         "zendframework/zend-modulemanager": "2.3.*"
     },
-    "require-dev": {
+    "require-dev":  {
         "zendframework/zendframework": "2.3.*",
         "phpunit/phpunit":             "~3.7",
         "squizlabs/php_codesniffer":   "1.5.*"
     },
-    "autoload":    {
+    "autoload":     {
         "psr-4": {
-            "MpaCustomDoctrineHydrator\\":     "src/"
+            "MpaCustomDoctrineHydrator\\": "src/"
         }
     },
-    "autoload-dev":    {
-        "psr-4": {
+    "autoload-dev": {
+        "psr-4":    {
             "MpaCustomDoctrineHydratorTest\\": "tests/"
-        }
+        },
+        "classmap": [
+            "Module.php"
+        ]
     },
-    "extra":       {
+    "extra":        {
         "branch-alias": {
             "dev-master": "0.4.x-dev"
         }
