--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev":  {
         "zendframework/zendframework": "2.3.*",
-        "phpunit/phpunit":             "~3.7",
+        "phpunit/phpunit":             "4.*",
         "squizlabs/php_codesniffer":   "1.5.*"
     },
     "autoload":     {
