--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require":      {
         "php":                               ">=5.5",
-        "doctrine/doctrine-orm-module":      "0.*",
+        "doctrine/doctrine-orm-module":      "~0.8",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-form":           "~2.3",
         "zendframework/zend-filter":         "~2.3",
@@ -30,7 +30,7 @@
     },
     "require-dev":  {
         "zendframework/zendframework": "~2.3",
-        "phpunit/phpunit":             "~4.3",
+        "phpunit/phpunit":             "~4.4",
         "squizlabs/php_codesniffer":   "~1.5"
     },
     "autoload":     {
