--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ php:
   - hhvm
   - hhvm-nightly
 
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7
+    - php: hhvm
+    - php: hhvm-nightly
+
 script:
   - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/
   - ./vendor/bin/phpunit --coverage-clover=coverage.clover
