--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require":      {
         "php":                               ">=5.5",
+        "ext-intl":                          "*",
         "doctrine/doctrine-orm-module":      "~0.8",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-form":           "~2.3",
