--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php":"^5.6 || ^7.0",
         "ext-intl": "*",
-        "doctrine/doctrine-orm-module": "~0.8",
+        "doctrine/doctrine-orm-module": "1.*",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-form": "~2.3",
         "zendframework/zend-filter": "~2.3",
