--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php":"^5.6 || ^7.0",
         "ext-intl": "*",
-        "doctrine/doctrine-orm-module": "1.*",
+        "doctrine/doctrine-orm-module": "~1.1",
         "zendframework/zend-servicemanager": "~2.3",
         "zendframework/zend-form": "~2.3",
         "zendframework/zend-filter": "~2.3",
