--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
     },
     "require-dev": {
         "zendframework/zendframework": "~2.3",
-        "phpunit/phpunit": "~4.4",
-        "squizlabs/php_codesniffer": "~2.3"
+        "phpunit/phpunit": "^5.6.0",
+        "squizlabs/php_codesniffer": "^2.6.2"
     },
     "autoload": {
         "psr-4": {
