--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,20 @@ sudo: false
 language: php
 
 php:
-  - 5.6
   - 7.0
-  - hhvm
+  - 7.1
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - php: hhvm
 
 script:
   - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/
-  - if [ $TRAVIS_PHP_VERSION != 'hhvm' ]; then ./vendor/bin/phpunit --coverage-clover=coverage.clover; fi
+  - ./vendor/bin/phpunit --coverage-clover=coverage.clover
 
 before_script:
   - composer self-update
-  - composer update --prefer-source
+  - composer install
 
 after_script:
-  - if [ $TRAVIS_PHP_VERSION != 'hhvm' ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  - if [ $TRAVIS_PHP_VERSION != 'hhvm' ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
