--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "~7.0",
+        "php": "^7.0",
         "ext-intl": "*",
         "doctrine/doctrine-orm-module": "~1.1",
         "zendframework/zend-servicemanager": "~2.3",
